# figural

./: README.md  pyproject.toml
src/figural/: pentagonal.py  triangular.py
tests/: test_all.py
