[project]
name = "figural"
dynamic = ['version']
description = "A tiny Python library for generating, testing and ploting triangular and pentagonal numbers"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "figural",
    "triangular numbers",
    "pentagonal numbers",
    "numpy",
]
authors = [{ name = "Diego Sandoval", email = "dsandovalv@gmail.com" }]
maintainers = [{ name = "Diego Sandoval", email = "dsandovalv@gmail.com" }]

dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "tikzplotlib>=0.10.1",
]

[project.optional-dependencies]
dev = ["pre-commit", "hatch", "ruff"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/twaclaw/figural"
Documentation = "https://github.com/twaclaw/figural"
Issues = "https://github.com/twaclaw/figural/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/figural"]

[tool.hatch.build.targets.sdist]
include = ["src/figural", "README.md"]

[tool.hatch.envs.default]
installer = "uv"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.hatch-test]
dependencies = ["pytest", "pytest-cov"]
dev-mode = true

[tool.ruff]
line-length = 179
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]
ignore = ["F722"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
